improved formatting for paragraphs and lists in topics/ replies

--- a/web/app/themes/huskies-theme/styles/reply.less
+++ b/web/app/themes/huskies-theme/styles/reply.less
@@ -90,6 +90,15 @@
   font-size: @fs-l;
   line-height: 1.7;
   word-wrap: break-word;
+
+  ul, ol, p {
+    margin-top: 16px;
+    margin-bottom: 16px;
+  }
+
+  ul, ol {
+    padding-left: 40px;
+  }
 }
 
 .reply__admin-links {
