fix: instagram link

--- a/web/app/themes/huskies-theme/views/layout/footer.twig
+++ b/web/app/themes/huskies-theme/views/layout/footer.twig
@@ -15,7 +15,7 @@
     </a>
   </li>
   <li class="footer-menu__item">
-    <a href="https://www.instagram.com/ultimate.huskies.berlin/">
+    <a href="https://www.instagram.com/ultimate_huskies/">
       {{ icon('instagram') }}
     </a>
   </li>
